force-app/main/default/objects/Trelew_Actividad__c/Trelew_Actividad__c.object-meta.xml
<CustomObject>
    <label>Trelew Actividad</label>
    <nameField>
        <displayFormat>Trelew Actividad - {0000000}</displayFormat>
        <label>Trelew Actividad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trelew Actividades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>