force-app/main/default/objects/Trelew_Actividad__c/fields/Certeza__c.field-meta.xml
<CustomField>
    <fullName>Certeza__c</fullName>
    <label>Certeza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>