force-app/main/default/objects/Trelew_Actividad__c/fields/Citizen_SFID__c.field-meta.xml
<CustomField>
    <fullName>Citizen_SFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudadano</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trelew Actividades</relationshipLabel>
    <relationshipName>Trelew_Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>