force-app/main/default/objects/Trelew_Actividad__c/fields/Direccion_de_Recogida__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Recogida__c</fullName>
    <label>Direccion de Recogida</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>