force-app/main/default/objects/Trelew_Actividad__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <formula>Citizen_SFID__r.Document_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>