force-app/main/default/objects/Trelew_Actividad__c/fields/DNI_cargaActividades__c.field-meta.xml
<CustomField>
    <fullName>DNI_cargaActividades__c</fullName>
    <label>DNI_cargaActividades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>