force-app/main/default/objects/Trelew_Actividad__c/fields/Medio__c.field-meta.xml
<CustomField>
    <fullName>Medio__c</fullName>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Callcenter</fullName>
            </value>
            <value>
                <fullName>Timbreo</fullName>
            </value>
            <value>
                <fullName>Ausentismo</fullName>
            </value>
            <value>
                <fullName>META - encuesta</fullName>
            </value>
            <value>
                <fullName>META - seguidores</fullName>
            </value>
            <value>
                <fullName>META - interaccion</fullName>
            </value>
            <value>
                <fullName>DIGITAL</fullName>
            </value>
            <value>
                <fullName>Punteo</fullName>
            </value>
            <value>
                <fullName>Punteo UCR</fullName>
            </value>
            <value>
                <fullName>Candidato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>