force-app/main/default/objects/Trelew_Actividad__c/fields/Necesita_Logistica__c.field-meta.xml
<CustomField>
    <fullName>Necesita_Logistica__c</fullName>
    <label>Necesita Logistica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>