force-app/main/default/objects/Trelew_Actividad__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Trelew_Actividad__c/&apos; + Id + &apos;/view&apos;,Citizen_SFID__r.FirstName + &apos; &apos; + Citizen_SFID__r.MiddleName + &apos; &apos; +Citizen_SFID__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto Actividad</label>
    <type>Text</type>
</CustomField>