force-app/main/default/objects/Trelew_Actividad__c/fields/Trelew_Contacto_Ampliado__c.field-meta.xml
<CustomField>
    <fullName>Trelew_Contacto_Ampliado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trelew Contacto Ampliado</label>
    <referenceTo>Trelew_Contacto_Ampliado__c</referenceTo>
    <relationshipLabel>Trelew Actividades</relationshipLabel>
    <relationshipName>Trelew_Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>