force-app/main/default/objects/Trelew_Actividad__c/listViews/No_conocemos_su_posici_n_de_Voto.listView-meta.xml
<ListView>
    <fullName>No_conocemos_su_posici_n_de_Voto</fullName>
    <columns>Nombre__c</columns>
    <columns>Citizen_SFID__c</columns>
    <columns>Fecha__c</columns>
    <columns>Afinidad__c</columns>
    <columns>Medio__c</columns>
    <columns>Necesita_Logistica__c</columns>
    <columns>Direccion_de_Recogida__c</columns>
    <columns>Comentario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Afinidad__c</field>
        <operation>notContain</operation>
        <value>Massoni,Merino</value>
    </filters>
    <label>No conocemos su posición de Voto</label>
    <sharedTo>
        <group>TrelewJxC2023</group>
    </sharedTo>
</ListView>