force-app/main/default/objects/Trelew_Actividad__c/listViews/Nos_vota_y_necesita_log_stica.listView-meta.xml
<ListView>
    <fullName>Nos_vota_y_necesita_log_stica</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Nombre__c</columns>
    <columns>Citizen_SFID__c</columns>
    <columns>Fecha__c</columns>
    <columns>Afinidad__c</columns>
    <columns>Medio__c</columns>
    <columns>Necesita_Logistica__c</columns>
    <columns>Direccion_de_Recogida__c</columns>
    <columns>Comentario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Afinidad__c</field>
        <operation>equals</operation>
        <value>Merino</value>
    </filters>
    <filters>
        <field>Necesita_Logistica__c</field>
        <operation>equals</operation>
        <value>Si</value>
    </filters>
    <label>Nos vota y necesita logística</label>
    <sharedTo>
        <group>TrelewJxC2023</group>
    </sharedTo>
</ListView>